--- a/package.json
+++ b/package.json
@@ -1,1 +1,29 @@
-{"name":"tossbook-backend","version":"1.0.0","type":"module","main":"src/server.js","scripts":{"start":"node src/server.js","dev":"nodemon src/server.js","lint":"eslint ."},"dependencies":{"bcryptjs":"^3.0.2","compression":"^1.8.1","cors":"^2.8.5","dotenv":"^17.2.3","express":"^5.1.0","helmet":"^8.0.0","jsonwebtoken":"^9.0.2","mongoose":"^8.19.0","morgan":"^1.10.1"},"devDependencies":{"nodemon":"^3.1.10"}}
+{
+  "name": "tossbook-backend",
+  "version": "1.0.0",
+  "description": "TossBook Backend API (Express + MongoDB)",
+  "type": "module",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.4",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18"
+  }
+}
